<resources>
    <string name="app_name">MyQuizApp</string>
    <string name="title">Quiz App</string>
    <string name="welcome">Welcome</string>
    <string name="your_name">Enter Your name</string>
    <string name="hint_name">e.g John</string>
    <string name="btn_start_txt">Start</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="submit">SUBMIT</string>
    <string name="tvResult">Result</string>
    <string name="imageDescription">image</string>
    <string name="tvCongratulationMessage">Hey, Congratulation</string>
    <string name="tvUserName">UserName</string>
    <string name="tvUserScore">Your Score is 9 out of 10</string>
    <string name="btnFinish">Finish</string>

</resources>