<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_bg"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp"
        tools:context=".ResultActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/tvResult"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
    />
    <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/imageDescription"
            android:src="@drawable/ic_trophy"
    />
    <TextView
            android:id="@+id/tvCongratulations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/tvCongratulationMessage"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
    />

    <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tvUserName"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold"
    />

    <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvUserScore"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="20sp"
            android:textStyle="bold"
    />

    <Button
            android:id="@+id/btnFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/btnFinish"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp"
            android:textStyle="bold"
    />
</LinearLayout>