<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_bg"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginBottom="30dp"
    />
    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"

    >
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="16dp"
                  android:orientation="vertical"
    >
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="#363A43"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_name"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="#7A8089"
        />
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="textCapWords"
                    android:textColor="#363A43"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:id="@+id/btn_start"
                android:layout_marginTop="16dp"
                android:background="@color/design_default_color_primary"
                android:text="@string/btn_start_txt"
                android:textColor="@color/white"
                android:textSize="18sp"
        />

    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>